# frametap

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  PLAN.md  README.md  SConstruct  TESTING.md  index.html  install.sh  style.css
.github/: FUNDING.yml
.github/workflows/: build.yml  build_release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  gui_jni.cpp
apt/: frametap.gpg.key
apt/pool/: frametap_0.1.2_amd64.deb  frametap_0.1.3_amd64.deb
cli/: cli_args.h  frametap_cli.cpp
examples/: capture_example.cpp  record_example.cpp
gui/: frametap_gui.cpp
include/frametap/: frametap.h  queue.h  receiving.h  recording.h  types.h  version.h
packaging/aur/: PKGBUILD
packaging/debian/: build-deb.sh
packaging/homebrew/: frametap.rb
packaging/scoop/: frametap.json
packaging/winget/: krazyjakee.frametap.yaml
src/: backend.h  frametap.cpp
src/audio/: ca_capture.h  ca_capture.mm  null_capture.h  pw_capture.cpp  pw_capture.h
src/decode/: nvdec_decoder.cpp  nvdec_decoder.h  receiver.cpp  ts_demux.cpp  ts_demux.h  vt_decoder.h  vt_decoder.mm
src/encode/: aac_encoder.cpp  aac_encoder.h  aac_encoder_null.cpp  dynlib.h  mp4_muxer.cpp  mp4_muxer.h  nal_util.cpp  nal_util.h  net_compat.h  net_stream.cpp  (+15 more)
tests/: helpers.h  test_android_pixel_convert.cpp  test_benchmark.cpp  test_cli.cpp  test_color.cpp  test_decode.cpp  test_enumerate.cpp  test_errors.cpp  test_lifecycle.cpp  test_muxer.cpp  test_permissions.cpp  test_queue.cpp  test_screenshot.cpp  test_security.cpp  test_streaming.cpp  test_types.cpp
(+37 files in other folders)
